--- a/www/app/user/login.html
+++ b/www/app/user/login.html
@@ -24,6 +24,9 @@
            onclick='window.open("http://strabospot.org/register", "_system", "location=yes"); return false;'>
           Create an account
         </a>
+        <p class='create-account-text' >
+          <small>version 0.17.3</small>
+        </p>
       </div>
       <button class='button icon-left button-positive button-small ion-forward pull-right skip' ng-click='vm.skip()'>
         Skip
