Changed mailto address

--- a/www/app/about/about.html
+++ b/www/app/about/about.html
@@ -53,8 +53,8 @@
                                                                     onclick='window.open("https://github.com/StraboSpot/strabo-mobile/issues", "_system", "location=yes"); return false;'>https://github.com/StraboSpot/strabo-mobile/issues</a>.
       Please post one issue per bug/issue/feature request and include the version number.
       <br>
-      - Alternatively, you can send an email to <a href='mailto:developer@azgs.az.gov?Subject=StraboSpotMobile'
-                                                   target='_top'>developer@azgs.az.gov</a>.
+      - Alternatively, you can send an email to <a href='mailto:strabospot@gmail.com?Subject=StraboSpotMobile'
+                                                   target='_top'>strabospot@gmail.com</a>.
     </div>
   </ion-content>
 </ion-view>
