edited calculations pause wording

--- a/www/app/spot/compass-modal.html
+++ b/www/app/spot/compass-modal.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <div class='padding' ng-show='!vmChild.error.both && !vmChild.error.compass && !vmChild.error.acceleration'>
-      Tap anywhere to Pause/Resume Calculations</div>
+      Tap anywhere in this window to pause or resume calculations</div>
     <ion-footer-bar>
       <div class="button-bar">
         <a class="button button-assertive" ng-click='vmChild.closeCompass()'>Cancel</a>
