changed usgin address to strabospot.org

--- a/www/app/about/about.html
+++ b/www/app/about/about.html
@@ -44,7 +44,7 @@
       Some functionality is limited when using the app through Ionic View however, such as the camera/photos.
       <br><br>
       A web version of the app can be accessed at <a href='#'
-                                                     onclick='window.open("http://strabo.usgin.org", "_system", "location=yes"); return false;'>http://strabo.usgin.org</a>.
+                                                     onclick='window.open("https://app.strabospot.org/", "_system", "location=yes"); return false;'>https://app.strabospot.org/</a>.
       Again, as above, functionality is limited when using the app this way.
       <br><br>
       <h5>Bugs, Feature Requests and Other Issues</h5>
