LiveDB functionality added.

--- a/www/index.html
+++ b/www/index.html
@@ -111,6 +111,7 @@
     <script src="app/project/project.factory.js"></script>
     <script src="app/remote-connection/remote-server.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
+    <script src="app/shared/livedb.factory.js"></script>
     <script src="app/shared/localstorage.factory.js"></script>
     <script src="app/spot/image.factory.js"></script>
     <script src="app/spot/spot.factory.js"></script>
