--- a/www/app/project/manage-project.html
+++ b/www/app/project/manage-project.html
@@ -3,20 +3,22 @@
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button
-      class='button button-icon ion-android-upload'
-      ng-show='vm.isSyncReady()'
-      ng-click='vm.initializeUpload()'>
-    </button>
-    <button
-      class='button button-icon ion-android-download'
-      ng-show='vm.isSyncReady()'
-      ng-click='vm.initializeDownload()'>
-    </button>
-    <!--<button
-       ng-class='{"button button-icon ion-loop": vm.isSyncReady(), "button button-icon ion-alert-circled": !vm.isSyncReady()}'
-       ng-click='vm.doSync()'>
-     </button>-->
+    <div ng-hide='vm.isWeb()'>
+      <button
+        class='button button-icon ion-android-upload'
+        ng-show='vm.isSyncReady()'
+        ng-click='vm.initializeUpload()'>
+      </button>
+      <button
+        class='button button-icon ion-android-download'
+        ng-show='vm.isSyncReady()'
+        ng-click='vm.initializeDownload()'>
+      </button>
+      <!--<button
+         ng-class='{"button button-icon ion-loop": vm.isSyncReady(), "button button-icon ion-alert-circled": !vm.isSyncReady()}'
+         ng-click='vm.doSync()'>
+       </button>-->
+    </div>
   </ion-nav-buttons>
   <ion-content class='has-header divider-buttons-right'>
     <!--<ion-refresher
