--- a/www/app/project/manage-project.html
+++ b/www/app/project/manage-project.html
@@ -30,7 +30,7 @@
     </div>-->
     <div class='field-group item item-divider'>
       Current Project
-      <i class='button button-icon ion-arrow-swap' ng-click='vm.switchProject()'></i>
+        <i class='button button-icon ion-arrow-swap' ng-click='vm.switchProject()' ng-hide='vm.isWeb()'></i>
     </div>
     <ion-item>
       <div class='padding' ng-hide='vm.showProject'>
