Don't hide Set to My Location button in Spot

--- a/www/app/spot/spot-tab.html
+++ b/www/app/spot/spot-tab.html
@@ -14,7 +14,7 @@
       <div class='padding' ng-if='!vmChild.mapped'>
         This spot has not been mapped yet.
       </div>
-      <button ng-click='vmChild.getCurrentLocation();' ng-hide='vmChild.showXY || vmChild.mapped'
+      <button ng-click='vmChild.getCurrentLocation();' ng-hide='vmChild.showXY'
               class='button button-clear button-positive'>
         <i class='icon ion-pinpoint'></i>
         <span class='button-text-small'>Set to My Location</span>
