--- a/www/index.html
+++ b/www/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="format-detection" content="telephone=no">
     <title>Strabo Mobile</title>
 
     <!-- underscore -->
