hid tools pages

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -75,9 +75,9 @@
         <ion-item nav-clear menu-close href='#/app/description'>
           Description
         </ion-item>
-        <ion-item nav-clear menu-close href='#/app/tools'>
+        <!--<ion-item nav-clear menu-close href='#/app/tools'>
           Tools
-        </ion-item>
+        </ion-item>-->
         <ion-item nav-clear menu-close href='#/app/preferences'>
           Preferences
         </ion-item>
