--- a/www/app/menu/menu.web.html
+++ b/www/app/menu/menu.web.html
@@ -48,7 +48,7 @@
           <ul class="dropdown-menu">
             <li><a ui-sref="app.manage-project">Manage</a></li>
             <li><a ui-sref="app.description">Description</a></li>
-            <li><a ui-sref="app.tools">Tools</a></li>
+            <!--<li><a ui-sref="app.tools">Tools</a></li>-->
             <li><a ui-sref="app.preferences">Preferences</a></li>
           </ul>
         </li>
