Moved spot scrolling from directive to spot.web.html

--- a/www/app/spots/spots.directive.html
+++ b/www/app/spots/spots.directive.html
@@ -1,4 +1,4 @@
-<div style="height: 700px; width: 325px; overflow-y: auto; overflow-x: hidden;">
+<div>
   <div class='padding-left filter-on' ng-show='vm.filterOn'>
     Results are being filtered.
   </div>
