--- a/www/app/spots/spots.web.html
+++ b/www/app/spots/spots.web.html
@@ -13,7 +13,9 @@
       <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
     </div>
   </div>
-  <strabo-spots-directive></strabo-spots-directive>
+  <div style="height: 700px; overflow-y: auto; overflow-x: hidden;">
+    <strabo-spots-directive></strabo-spots-directive>
+  </div>
 </div>
 
 <div class="col-xs-9" id="right">
