Moved spot scrolling CSS to style.web.css

--- a/www/app/spots/spots.web.html
+++ b/www/app/spots/spots.web.html
@@ -13,7 +13,7 @@
       <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
     </div>
   </div>
-  <div style="height: 700px; overflow-y: auto; overflow-x: hidden;">
+  <div class="spot-scroll">
     <strabo-spots-directive></strabo-spots-directive>
   </div>
 </div>
