--- a/www/app/maps/image-basemaps/image-basemaps.web.html
+++ b/www/app/maps/image-basemaps/image-basemaps.web.html
@@ -1,4 +1,4 @@
-<div class="col-xs-3" id="left">
+<div class="col-xs-3 strabo-column" id="left">
   <div class="strabo-subheader">
     <div class="subheader-left">
       <div class="text-left strabo-subheader-text">Image Basemaps</div>
