--- a/www/app/relationships/relationships.web.html
+++ b/www/app/relationships/relationships.web.html
@@ -1,4 +1,4 @@
-<div class="col-xs-3" id="left">
+<div class="col-xs-3 strabo-column" id="left">
   <div class="strabo-subheader">
     <div class="subheader-left">
       <div class="text-left strabo-subheader-text">Relationships</div>
@@ -11,7 +11,7 @@
   <strabo-relationships-directive></strabo-relationships-directive>
 </div>
 
-<div class="col-xs-9" id="right">
+<div class="col-xs-9 strabo-column" id="right">
   <div ng-hide="vm.relationshipIdSelected" class="padding">No Relationship Selected</div>
   <div ng-show="vm.relationshipIdSelected">
     <div ui-view="relationship-view"></div>
