--- a/www/app/spots/spots.web.html
+++ b/www/app/spots/spots.web.html
@@ -1,4 +1,4 @@
-<div class="col-xs-3" id="left">
+<div class="col-xs-3 strabo-column" id="left">
   <div class="strabo-subheader">
     <div class="subheader-left">
       <div class="text-left strabo-subheader-text">
@@ -13,12 +13,12 @@
       <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
     </div>
   </div>
-  <div class="spot-scroll">
+  <div>
     <strabo-spots-directive></strabo-spots-directive>
   </div>
 </div>
 
-<div class="col-xs-9" id="right">
+<div class="col-xs-9 strabo-column" id="right">
   <div ng-hide="vm.spotIdSelected" class="padding">No Spot Selected</div>
   <div ng-show="vm.spotIdSelected">
     <div ui-view="spot-data"></div>
