don't do infinite scroll for WEB

--- a/www/app/spots/spots.directive.html
+++ b/www/app/spots/spots.directive.html
@@ -46,7 +46,7 @@
       </button>
     </ion-item>
     <ion-infinite-scroll
-      ng-if='vm.moreSpotsCanBeLoaded()'
+      ng-if='!vm.isWeb() && vm.moreSpotsCanBeLoaded()'
       icon='ion-loading-c'
       on-infinite='vm.loadMoreSpots()'>
     </ion-infinite-scroll>
