--- a/www/app/spot/spot/spot.web.html
+++ b/www/app/spot/spot/spot.web.html
@@ -1,6 +1,6 @@
 <div class="strabo-subheader">
   <div class="subheader-left">
-    <button ng-click='vm.submit()' class='button icon ion-checkmark-circled'> Save</button>
+    <button ng-click='vm.submit()' class='button button-icon icon ion-checkmark-circled'> Save</button>
   </div>
   <div class="subheader-right">
     <button ng-click='vm.viewMap()' class='button button-icon icon ion-map'></button>
