--- a/www/app/maps/image-basemap/image-basemap.web.html
+++ b/www/app/maps/image-basemap/image-basemap.web.html
@@ -6,4 +6,22 @@
     <button ng-click='vm.popover.show($event)'
             class='button button-icon icon button-small ion-more rotate-90'></button>
   </div>
+
+  <!-- Side Slide Content -->
+  <div>
+    <div id='map-side-panel'>
+      <strabo-map-side-panel></strabo-map-side-panel>
+    </div>
+    <script>
+      $('#map-side-panel').BootSideMenu({
+        side: 'right',          // 'left' or 'right'
+        duration: 500,          // animation speed
+        remember: true,         // restore last menu status on page refresh
+        autoClose: false,       // auto close
+        pushBody: false,        // push the whole page
+        closeOnClick: true,     // close on click
+        width: '25%'            // width
+      });
+    </script>
+  </div>
 </div>
