make mobile version match light colors of web version

--- a/www/app/maps/other-maps/add-map-modal.html
+++ b/www/app/maps/other-maps/add-map-modal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-dark nav-title-slide-ios7'>
+  <ion-header-bar class='bar-stable nav-title-slide-ios7'>
     <button class='button icon ion-checkmark-circled button-clear'
             ng-click='vm.save()'>
     </button>
