--- a/www/app/misc/misc-modal.html
+++ b/www/app/misc/misc-modal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-dark nav-title-slide-ios7'>
+  <ion-header-bar class='bar-stable nav-title-slide-ios7'>
     <h1 class='title'>Spot Data Model</h1>
     <button class='button icon ion-close-round button-clear'
             ng-click='vm.closeModal("spotModelModal")'></button>
