--- a/www/app/project/description/description-modal.html
+++ b/www/app/project/description/description-modal.html
@@ -1,6 +1,6 @@
 <form name='straboForm' novalidate=''>
   <ion-modal-view>
-    <ion-header-bar class='bar-dark nav-title-slide-ios7'>
+    <ion-header-bar class='bar-stable nav-title-slide-ios7'>
       <div class="buttons">
         <div class='button button-clear' ng-click='vm.closeModal("descriptionModal")'>
           <span class='icon ion-arrow-left-c'></span></div>
