--- a/www/app/spots/spots-filter-modal.html
+++ b/www/app/spots/spots-filter-modal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-dark nav-title-slide-ios7' align-title='center'>
+  <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
     <button ng-click='vm.closeModal("filterModal")' class='button button-icon icon ion-arrow-left-c'></button>
     <h1 class='title'>Filter</h1>
   </ion-header-bar>
