--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -1,7 +1,7 @@
 <ion-side-menus>
 
   <ion-pane ion-side-menu-content>
-    <ion-nav-bar class='bar-dark'>
+    <ion-nav-bar class='bar-stable'>
     </ion-nav-bar>
     <ion-nav-view name='menuContent' animation='slide-left-right'></ion-nav-view>
   </ion-pane>
@@ -22,7 +22,7 @@
             </div>
             <div ng-show='!vm.userName'>
               <br>
-              <button class='button button-small icon-left icon button-clear button-light ion-log-in'>Login
+              <button class='button button-small icon-left icon button-clear button-dark ion-log-in'>Login
               </button>
             </div>
           </td>
