--- a/www/app/project/description/daily-setup-modal.html
+++ b/www/app/project/description/daily-setup-modal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-dark nav-title-slide-ios7'>
+  <ion-header-bar class='bar-stable nav-title-slide-ios7'>
     <div class="buttons">
       <div class='button button-clear' ng-click='vm.closeModal("dailySetupModal")'>
         <span class='icon ion-arrow-left-c'></span></div>
