--- a/www/app/spot/images/image-properties-modal.html
+++ b/www/app/spot/images/image-properties-modal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-dark nav-title-slide-ios7'>
+  <ion-header-bar class='bar-stable nav-title-slide-ios7'>
     <div class="buttons">
       <div class='button button-clear' ng-click='vmChild.closeModal("imagePropertiesModal")'><span
         class='icon ion-arrow-left-c'></span></div>
