--- a/www/app/spot/orientations/compass-modal.html
+++ b/www/app/spot/orientations/compass-modal.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-  <ion-header-bar class='bar-dark nav-title-slide-ios7'>
+  <ion-header-bar class='bar-stable nav-title-slide-ios7'>
     <button class='button icon ion-arrow-left-c button-clear'
             ng-click='vmChild.closeCompass()'>
     </button>
