--- a/www/app/spots/spots.html
+++ b/www/app/spots/spots.html
@@ -8,7 +8,7 @@
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button class='button button-icon ion-funnel button-positive' ng-click='vm.filter()'></button>
+    <button class='button button-icon ion-funnel' ng-click='vm.filter()'></button>
     <button class='button button-icon ion-plus' ng-click='vm.newSpot()'></button>
     <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </ion-nav-buttons>
