added notices for when data has changed and needs saving but also save on leaving the current state if there are changes which the user hasn't saved

--- a/www/app/misc/misc.web.html
+++ b/www/app/misc/misc.web.html
@@ -1,6 +1,11 @@
 <div class="center-block">
   <div class="strabo-subheader">
-    <div class="subheader-left"><button ng-click='vm.save();' class='button icon ion-checkmark-circled'> Save</button></div>
+    <div class="subheader-left">
+      <button ng-click='vm.save()' class='button button-icon icon'
+              ng-class='{"ion-alert-circled": vm.dataChanged, "ion-checkmark-circled": !vm.dataChanged }'>
+        <span ng-show='vm.dataChanged' class="positive"> Unsaved Changes</span>
+        <span ng-show='!vm.dataChanged'> Data Saved</span></button>
+    </div>
     <div class="text-center strabo-subheader-text">Miscellaneous</div>
   </div>
   <strabo-misc-directive></strabo-misc-directive>
