moved data-tap-disabled to mapdiv as it interfered with clicks/toggles in the side panel

--- a/www/app/maps/image-basemap/image-basemap.web.html
+++ b/www/app/maps/image-basemap/image-basemap.web.html
@@ -1,5 +1,5 @@
-<div class="map" data-tap-disabled='true'>
-  <div id='mapdiv'></div>
+<div class="map">
+  <div id='mapdiv' data-tap-disabled='true'></div>
   <div class='saveEdits' ng-show='vm.showSaveEditsBtn' ng-click='vm.saveEdits()'>{{ vm.saveEditsText }}</div>
   <div class='image-basemap-menu'>
     <span ng-show='vm.isNesting' class='nesting-notification-web'>Nesting On</span>
