changed state name to show compass

--- a/www/app/spot/basic-form-modal.html
+++ b/www/app/spot/basic-form-modal.html
@@ -6,7 +6,7 @@
     <h1 class='title'>{{ vmChild.modalTitle }}</h1>
     <button class='button button-clear icon ion-compass'
             ng-click='vmChild.openCompass()'
-            ng-show='vm.stateName === "app.spotTab.orientation-data"'></button>
+            ng-show='vm.stateName === "app.spotTab.orientations"'></button>
   </ion-header-bar>
   <ion-content class='has-header'>
     <div class='padding orientation-reference' ng-show="vmChild.parentOrientation">
