--- a/www/indexWeb.html
+++ b/www/indexWeb.html
@@ -119,6 +119,7 @@
     <script src="app/maps/offline-maps/slippy-tile-names.factory.js"></script>
     <script src="app/maps/map/symbology.factory.js"></script>
     <script src="app/project/project.factory.js"></script>
+    <script src="app/shared/auto-login.factory.js"></script>
     <script src="app/shared/remote-server.factory.js"></script>
     <script src="app/shared/helpers.factory.js"></script>
     <script src="app/shared/livedb.factory.js"></script>
