cordova somehow deleted. added back in

--- a/www/index.html
+++ b/www/index.html
@@ -37,9 +37,10 @@
     <script src="lib/localforage-cordovasqlitedriver/src/localforage-cordovasqlitedriver.js"></script>
 
     <!-----------------------------------------------------------------
-    MOBILE APP ONLY (this will be a 404 during development)
+    MOBILE APP ONLY
     ------------------------------------------------------------------->
     <script src="lib/ng-cordova.js"></script>
+    <script src="cordova.js"></script>          <!--(this will be a 404 during development)-->
 
     <!-----------------------------------------------------------------
     STRABO FILES
