--- a/www/app/project/manage/manage-project.html
+++ b/www/app/project/manage/manage-project.html
@@ -3,20 +3,7 @@
     <button menu-toggle='left' class='button button-icon icon ion-navicon'></button>
   </ion-nav-buttons>
   <ion-nav-buttons side='right'>
-    <button
-      class='button button-icon ion-android-upload'
-      ng-show='vm.isSyncReady()'
-      ng-click='vm.initializeUpload()'>
-    </button>
-    <button
-      class='button button-icon ion-android-download'
-      ng-show='vm.isSyncReady()'
-      ng-click='vm.initializeDownload()'>
-    </button>
-    <!--<button
-       ng-class='{"button button-icon ion-loop": vm.isSyncReady(), "button button-icon ion-alert-circled": !vm.isSyncReady()}'
-       ng-click='vm.doSync()'>
-     </button>-->
+    <button ng-click='vm.popover.show($event)' class='button button-icon icon ion-more rotate-90'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
     <strabo-manage-project-directive></strabo-manage-project-directive>
