--- a/www/app/project/manage/switch-project-modal.html
+++ b/www/app/project/manage/switch-project-modal.html
@@ -1,29 +1,14 @@
 <form name='straboForm' novalidate=''>
   <ion-modal-view>
     <ion-header-bar class='bar-stable nav-title-slide-ios7' align-title='center'>
-      <button class='button icon ion-checkmark-circled button-clear'
-              ng-click='vm.newProject()'
-              ng-show='vm.showNewProjectDetail'>
-      </button>
-      <h1 class='title'>{{ vm.titleText }}</h1>
+      <h1 class='title'>Select a Project</h1>
       <button class='button icon ion-close-round button-clear'
-              ng-click='vm.closeModal()'
+              ng-click='vm.switchProjectModal.hide()'
               ng-show='vm.showExitProjectModal'>
       </button>
     </ion-header-bar>
     <ion-content class='has-header'>
-      <div class="button-bar">
-        <button class='button button-light' ng-show='vm.showProjectButtons' ng-click='vm.toggleProject("new")'>
-          New Project
-        </button>
-        <button class='button button-light' ng-show='vm.showProjectButtons' ng-click='vm.toggleProject("existing")'>
-          Existing Projects
-        </button>
-      </div>
-      <div ng-show='vm.showNewProjectDetail'>
-        <auto-fields/>
-      </div>
-      <ion-list ng-show='vm.showExistingProjectsList'>
+      <ion-list>
         <ion-item ng-repeat='project in vm.projects track by project.id'
                   ng-click='vm.selectProject(project)'
                   class='item-button-right'>
