--- a/www/app/spot/images/image-properties-modal.html
+++ b/www/app/spot/images/image-properties-modal.html
@@ -13,6 +13,8 @@
     </div>
   </ion-header-bar>
   <ion-content class='has-header strabo-form'>
-    <auto-fields></auto-fields>
+    <form name='straboForm' novalidate=''>
+      <auto-fields/>
+    </form>
   </ion-content>
 </ion-modal-view>
