added export project text data as json and reattach individual image

--- a/www/app/project/manage/manage-project-popover.html
+++ b/www/app/project/manage/manage-project-popover.html
@@ -13,6 +13,12 @@
       <ion-item ng-show='vm.isSyncReady()' ng-click='vm.initializeDownload()'>
         <i class='icon ion-android-download'></i> Download Project
       </ion-item>
+      <ion-item ng-click='vm.exportProject()'>
+        <img class='strabo-icon' src='img/export-project.png' height="6" width="6"> Export Project to Device
+      </ion-item>
+      <ion-item ng-click='vm.importProject()'>
+        <img class='strabo-icon' src='img/import-project.png' height="6" width="6"> Import Project from Device
+      </ion-item>
     </ion-list>
   </ion-content>
 </ion-popover-view>
