--- a/www/app/spot/images/image-properties-modal.html
+++ b/www/app/spot/images/image-properties-modal.html
@@ -6,6 +6,8 @@
     </div>
     <h1 class='title'>Image Properties</h1>
     <div class="buttons">
+      <button ng-hide='vmChild.isWeb()' ng-click='vmChild.reattachImage();'
+              class='button button-icon icon ion-link'></button>
       <button ng-click='vmChild.exportImage();'
               class='button button-icon icon ion-archive'></button>
       <button ng-click='vmChild.deleteImage();'
