export all images

--- a/www/app/project/manage/manage-project-popover.html
+++ b/www/app/project/manage/manage-project-popover.html
@@ -14,10 +14,10 @@
         <i class='icon ion-android-download'></i> Download Project
       </ion-item>
       <ion-item ng-click='vm.exportProject()'>
-        <img class='strabo-icon' src='img/export-project.png' height="6" width="6"> Export Project to Device
+        <img class='strabo-icon' src='img/export-project.png'> Export Project to Device
       </ion-item>
       <ion-item ng-click='vm.importProject()'>
-        <img class='strabo-icon' src='img/import-project.png' height="6" width="6"> Import Project from Device
+        <img class='strabo-icon' src='img/import-project.png'> Import Project from Device
       </ion-item>
     </ion-list>
   </ion-content>
