--- a/www/app/relationship/relationship.html
+++ b/www/app/relationship/relationship.html
@@ -3,7 +3,7 @@
     <button ng-hide='vm.currentSpot' ng-click='vm.go("/app/relationships");'
             class='button button-icon icon ion-arrow-left-c'></button>
     <button ng-show='vm.currentSpot'
-            ng-click='vm.go("/app/spotTab/" + vm.currentSpot.properties.id + "/inferences");'
+            ng-click='vm.go("/app/spotTab/" + vm.currentSpot.properties.id + "/relationships");'
             class='button button-icon icon ion-arrow-left-c'></button>
   </ion-nav-buttons>
   <ion-content class='has-header'>
