--- a/www/app/spot/tabs/spot-tabs.directive.html
+++ b/www/app/spot/tabs/spot-tabs.directive.html
@@ -46,11 +46,11 @@
         Other Features
       </a>
     </span>
-  <span ng-show='vm.showTab("inferences")'>
+  <span ng-show='vm.showTab("relationships")'>
       <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.inferences"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/inferences");'>
-        Inferences
+         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.relationships"}'
+         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/relationships");'>
+        Relationships
       </a>
     </span>
   <span ng-show='vm.showTab("tags")'>
