--- a/www/app/spot/tabs/spot-tabs.directive.html
+++ b/www/app/spot/tabs/spot-tabs.directive.html
@@ -1,69 +1,15 @@
 <div>
-  <a class='button button-clear spot-tab-inactive'
-     ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.spot"}'
-     ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/spot")'>
-    Spot
-  </a>
-  <span ng-show='vm.showTab("orientations")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.orientations"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/orientations")'>
-        Orientations
-      </a>
-    </span>
-  <span ng-show='vm.showTab("_3dstructures")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab._3dstructures"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/_3dstructures");'>
-        3D Structures
-      </a>
-    </span>
-  <span ng-show='vm.showTab("images")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.images"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/images");'>
-        Images
-      </a>
-    </span>
-  <span ng-show='vm.showTab("nesting")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.nesting"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/nesting");'>
-        Nesting
-      </a>
-    </span>
-  <span ng-show='vm.showTab("samples")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.samples"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/samples");'>
-        Samples
-      </a>
-    </span>
-  <span ng-show='vm.showTab("other_features")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.other-features"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/other-features");'>
-        Other Features
-      </a>
-    </span>
-  <span ng-show='vm.showTab("relationships")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.relationships"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/relationships");'>
-        Relationships
-      </a>
-    </span>
-  <span ng-show='vm.showTab("tags")'>
-      <a class='button button-clear spot-tab-inactive'
-         ng-class='{ "spot-tab-active": vm.stateName == "app.spotTab.tags"}'
-         ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/tags");'>
-        Tags
-      </a>
-    </span>
+  <span ng-show='vm.showTab(tab.value)' ng-repeat='tab in vm.tabs track by $index'>
+    <a class='button button-clear spot-tab-inactive'
+       ng-class='{ "spot-tab-active": vm.stateName === "app.spotTab." + tab.path}'
+       ng-click='vm.submit("/app/spotTab/" + vm.spot.properties.id + "/" + tab.path)'>
+    {{ tab.label }}
+    </a>
+  </span>
   <span>
-      <a class='button button-clear spot-tab-inactive'
-         ng-click='vm.submit("/app/preferences");'>
+    <a class='button button-clear spot-tab-inactive'
+       ng-click='vm.submit("/app/preferences");'>
         More
-      </a>
-    </span>
+    </a>
+  </span>
 </div>
