moved relationships and tags under attributes menu item

--- a/www/app/menu/menu.html
+++ b/www/app/menu/menu.html
@@ -38,6 +38,9 @@
         <ion-item nav-clear menu-close href='#/app/spots'>
           Spots
         </ion-item>
+        <div class='field-group item item-divider'>
+          Attributes
+        </div>
         <ion-item nav-clear menu-close href='#/app/relationships'>
           Relationships
         </ion-item>
