--- a/www/app/menu/menu.web.html
+++ b/www/app/menu/menu.web.html
@@ -21,6 +21,7 @@
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             Attributes<span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a ui-sref="app.samples">Samples</a></li>
             <li><a ui-sref="app.relationships">Relationships</a></li>
             <li><a ui-sref="app.tags">Tags</a></li>
           </ul>
